@@ -1,0 +1,3 @@
+ActionView::Base.class_eval do
+  
+end
