@@ -1,3 +1,5 @@
+- Fix template loading on Edge Rails and on Rails 2.1.0
+
 0.3.1
 - Fix migration issue with Rails 2.1.0 using timestamps.
 
